more breadcrumb fun

--- a/webservice/templates/calendar.html
+++ b/webservice/templates/calendar.html
@@ -6,7 +6,7 @@
 
 {%block breadcrumbs%}
 <div class="ui breadcrumb" style="margin-top:-45px;">
-  <a href="/poms" class="section">Home</a>
+  <a href="/poms/" class="section">Home</a>
   <div class="divider"> / </div>
   <div class="section">Calendar</div>
 </div>
