--- a/webservice/templates/job_count_table.html
+++ b/webservice/templates/job_count_table.html
@@ -7,9 +7,9 @@
 
 {%block breadcrumbs%}
 <div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="/poms" class="section">Home</a>
+  <a href="/poms/" class="section">Home</a>
   <div class="divider"> / </div>
-  <div class="section">Jobs by exit code {% if days == 7 %} (weekly) {% elif days == 1 %} (daily)  {% endif %}   </div>
+  <div class="section">Jobs by exit code {% if days == 7 %} (weekly) {% elif days == 1 %} (daily) {% endif %}</div>
 </div>
 {%endblock%}
 
