--- a/webservice/templates/edit_screen.html
+++ b/webservice/templates/edit_screen.html
@@ -6,7 +6,7 @@
 
 {%block breadcrumbs%}
 <div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="/poms" class="section">Home</a>
+  <a href="/poms/" class="section">Home</a>
   <div class="divider"> / </div>
   <a class="section">DB Admin</a>
   <div class="divider"> / </div>
