--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -5,12 +5,15 @@
 {%endblock%}
 
 {%block breadcrumbs%}
-    <div class="item">
-       Dashboard  <!--label of current location on mobile-->
-    </div>
-    <div class="item">
-      Job Triage <!--label of current location on mobile-->
-    </div>
+<div class="ui breadcrumb" style="margin-top: -45px;">
+  <a href="/poms/" class="section">Home</a>
+  <div class="divider"> / </div>
+  <a href="/poms/show_campaigns/" class="section">Campaigns</a>
+  <div class="divider"> / </div>
+  <a href="javascript:window.history.go(-1);" class="section">Jobs in task {{job_info.Job.task_id}}</a>
+  <div class="divider"> / </div>
+  <div class="section">Triage job {{job_id}}</div>
+</div>
 {%endblock%}
 
 
@@ -107,10 +110,10 @@
 {% for item in job_file_list %}
 
 {% if item.find(jobsub_job_id_digits) > -1 %}
-<mark> <a href="/poms/job_file_contents?job_id={{job_id}}&file={{item}}">{{ item }}</a> </mark>
+<mark> <a href="/poms/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&file={{item}}">{{ item }}</a> </mark>
 <br/>
 {% else %}
-<a href="/poms/job_file_contents?job_id={{job_id}}&file={{item}}">{{ item }}</a>
+<a href="/poms/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&file={{item}}">{{ item }}</a>
 <br/>
 {% endif %}
 
