--- a/webservice/templates/job_file_contents.html
+++ b/webservice/templates/job_file_contents.html
@@ -10,9 +10,9 @@
   <div class="divider"> / </div>
   <a href="/poms/show_campaigns/" class="section">Campaigns</a>
   <div class="divider"> / </div>
-  <a href="javascript:window.history.go(-1);" class="section">Jobs in task {{task_id}}</a>
+  <a href="/poms/show_task_jobs?task_id={{task_id}}&tmin={{tmin}}" class="section">Jobs in task {{task_id}}</a>
   <div class="divider"> / </div>
-  <a href= "/poms/triage_job?job_id={{job_id}}" class="section">Triage job {{job_id}}</a>
+  <a href= "/poms/triage_job?job_id={{job_id}}&tmin={{tmin}}" class="section">Triage job {{job_id}}</a>
   <div class="divider"> / </div>
   <div class="section">File contents</div>
 </div>
