--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -110,7 +110,7 @@
 {% for item in job_file_list %}
 
 {% if item.find(jobsub_job_id_digits) > -1 %}
-<mark> <a href="/poms/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}file={{item}}">{{ item }}</a> </mark>
+<mark> <a href="/poms/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item}}">{{ item }}</a> </mark>
 <br/>
 {% else %}
 <a href="/poms/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item}}">{{ item }}</a>
