fixed refetch button and added margin to content block

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -238,7 +238,7 @@
                        
                         {%block subheader%} {%endblock%} 
 
-                        <div class="no example">
+                        <div class="no example" style="margin: 0px 10px 0px 10px;">
                         {%block content%} {%endblock%}
 
 
