time_grid fixes...

--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -24,6 +24,8 @@
 
 {%block subheader%}
 <h2 class="ui dividing header">Active Campaigns as of {{tmin}}</h2>
+<a href="{{prev}}">&lt;previous {{days}} days</a> | 
+<a href="{{next}}">next {{days}} days &gt;</a>
 {%endblock%}
 
 
