added popups for hover effect

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -305,12 +305,17 @@ $( ".requests" ).click(function() {
 
 
 
-
-
-
-
-
-
+<script>
+$('.tbox')
+  .popup({
+    position : 'top left',
+    delay: {
+      show: 2,
+      hide: 2
+    }
+  })
+;
+</script>
 
 
 
