updated semantic and search links

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -106,7 +106,18 @@
                     </a>
                 </div>
             </div>
-            
+
+
+            <a class="item requests"  href="#">
+                <b>Filter</b>
+            </a>
+
+<div class="item">
+  <div class="ui inverted transparent left icon input">
+    <input type="text" placeholder="Search...">
+    <i class="search icon"></i>
+  </div>
+</div>    
             
         </div>  <!--ends mobile menu-->
         
@@ -198,6 +209,19 @@
 				</div>
                         </div>
                         
+
+
+
+            <a class="item requests"  href="#">
+                <b>Filter</b>
+            </a>
+
+<div class="item">
+  <div class="ui inverted transparent left icon input">
+    <input type="text" placeholder="Search...">
+    <i class="search icon"></i>
+  </div>
+</div>
                         
                         
                     </div>   <!--ends ui vertical inverted sticky menu-->
