added quick search functionality on jobsub_job_id

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -218,7 +218,9 @@
 
 <div class="item">
   <div class="ui inverted transparent left icon input">
-    <input type="text" placeholder="Search...">
+         <form method="get" action="/poms/quick_search">
+    <input type="text" name="jobsub_job_id" placeholder="Search...">
+         </form>
     <i class="search icon"></i>
   </div>
 </div>
