hover popups instead of hover titles for dashboard

--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -363,6 +363,18 @@ $('.tbox')
     }
   })
 ;
+
+
+
+$('.tbox_delayed')
+  .popup({
+    position : 'top left',
+    delay: {
+      show: 1024,
+      hide: 2
+    }
+  })
+;
 </script>
 
 
