added output file names to triage page

--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -251,4 +251,25 @@
 
 
 
+
+
+
+{% if output_file_names_list %}
+<h4 class="ui horizontal divider header">
+      <i class="file outline icon"></i>
+      Output File Names
+</h4>
+{%for item in output_file_names_list%}
+{{item}}
+<br/>
+{% endfor %}
+{% endif %}
+
+
+
+
+
+
+
+
 {%endblock%}
