--- a/webservice/templates/job_grid.html
+++ b/webservice/templates/job_grid.html
@@ -7,9 +7,9 @@
 
 {%block breadcrumbs%}
 <div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="/poms/" class="section">Home</a>
+  <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="/poms/show_campaigns/" class="section">Campaigns</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaigns</a>
   <div class="divider"> / </div>
   <div class="section">Jobs in task {{taskid}}</div>
 </div>
