--- a/webservice/templates/list_screen.html
+++ b/webservice/templates/list_screen.html
@@ -7,9 +7,9 @@
 
 {%block breadcrumbs%}
 <div class="ui breadcrumb" style="margin-top:-45px;">
-  <a href="/poms" class="section">Home</a>
+  <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="/poms/admin_screen" class="section">DB Admin</a>
+  <a href="{{pomspath}}/admin_screen" class="section">DB Admin</a>
   <div class="divider"> / </div>
   <div class="section">{{classname}}</div>
 </div>
