--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -7,7 +7,7 @@
 
 {%block breadcrumbs%}
 <div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="/poms/" class="section">Home</a>
+  <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
   <div class="section">Campaigns</div>
 </div>
