--- a/webservice/templates/edit_screen.html
+++ b/webservice/templates/edit_screen.html
@@ -6,11 +6,11 @@
 
 {%block breadcrumbs%}
 <div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="/poms/" class="section">Home</a>
+  <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
   <a class="section">DB Admin</a>
   <div class="divider"> / </div>
-  <a href="/poms/list_generic?classname={{classname}}" class="section">{{classname}}</a>
+  <a href="{{pomspath}}/list_generic?classname={{classname}}" class="section">{{classname}}</a>
   <div class="divider"> / </div>
   <div class="section">edit {{classname}}</div>
 </div>
