--- a/webservice/templates/job_file_contents.html
+++ b/webservice/templates/job_file_contents.html
@@ -6,13 +6,13 @@
 
 {%block breadcrumbs%}
 <div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="/poms/" class="section">Home</a>
+  <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="/poms/show_campaigns/" class="section">Campaigns</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaigns</a>
   <div class="divider"> / </div>
-  <a href="/poms/show_task_jobs?task_id={{task_id}}&tmin={{tmin}}" class="section">Jobs in task {{task_id}}</a>
+  <a href="{{pomspath}}/show_task_jobs?task_id={{task_id}}&tmin={{tmin}}" class="section">Jobs in task {{task_id}}</a>
   <div class="divider"> / </div>
-  <a href= "/poms/triage_job?job_id={{job_id}}&tmin={{tmin}}" class="section">Triage job {{job_id}}</a>
+  <a href= "{{pomspath}}/triage_job?job_id={{job_id}}&tmin={{tmin}}" class="section">Triage job {{job_id}}</a>
   <div class="divider"> / </div>
   <div class="section">File contents</div>
 </div>
