--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -17,24 +17,24 @@
             
           
             
-            <script src="/poms/static/js/jquery-2.1.4.min.js"></script>
+            <script src="{{pomspath}}/static/js/jquery-2.1.4.min.js"></script>
             
-            <link rel="stylesheet" type="text/css" href="/poms/static/css/semantic.css">
+            <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/semantic.css">
                 
-            <script src="/poms/static/js/semantic.js"></script>
+            <script src="{{pomspath}}/static/js/semantic.js"></script>
             
-            <script src="/poms/static/js/poms.js"></script>
-            <script src="/poms/static/js/tablesort.min.js"></script>            
-            <link rel="stylesheet" type="text/css" href="/poms/static/css/poms.css">
+            <script src="{{pomspath}}/static/js/poms.js"></script>
+            <script src="{{pomspath}}/static/js/tablesort.min.js"></script>            
+            <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/poms.css">
 
 
 
-            <link href='/poms/static/css/fullcalendar.css' rel='stylesheet' />
-            <link href='/poms/static/css/fullcalendar.print.css' rel='stylesheet' media='print' />
-            <script src='/poms/static/js/moment.min.js'></script>
-            <script src='/poms/static/js/moment-timezone.min.js'></script>
-            <script src='/poms/static/js/moment-timezone-with-data.js'></script>
-            <script src='/poms/static/js/fullcalendar.min.js'></script>
+            <link href='{{pomspath}}/static/css/fullcalendar.css' rel='stylesheet' />
+            <link href='{{pomspath}}/static/css/fullcalendar.print.css' rel='stylesheet' media='print' />
+            <script src='{{pomspath}}/static/js/moment.min.js'></script>
+            <script src='{{pomspath}}/static/js/moment-timezone.min.js'></script>
+            <script src='{{pomspath}}/static/js/moment-timezone-with-data.js'></script>
+            <script src='{{pomspath}}/static/js/fullcalendar.min.js'></script>
     </head>
     
     
@@ -58,18 +58,18 @@
                 <i class="rocket icon"></i>
               <!--
                 <a class="ui logo icon image" href="">
-                    <img src="/poms/static/images/logo.png">
+                    <img src="{{pomspath}}/static/images/logo.png">
                 </a>
               -->
                 <b>POMS</b>
                 </div>
             </div>
             
-            <a class="item" href="/poms/">
+            <a class="item" href="{{pomspath}}/">
                 <b>Dashboard</b>
             </a>
             
-            <a class="item" href="/poms/calendar">
+            <a class="item" href="{{pomspath}}/calendar">
                 <b>Calendar</b>
             </a>
 
@@ -77,7 +77,7 @@
                 <b>Requests</b>
             </a>
 
-           <a class="item" href="/poms/admin_screen">
+           <a class="item" href="{{pomspath}}/admin_screen">
         	<b>DB Admin</b>
            </a>
 
@@ -85,7 +85,7 @@
             <div class="item">
                 <div class="header">Campaigns</div>
                 <div class="menu">
-                <a class="item" href="/poms/show_campaigns">
+                <a class="item" href="{{pomspath}}/show_campaigns">
                   Active
                 </a>
                 </div>
@@ -95,13 +95,13 @@
                 <div class="header">Jobs</div>
                 <div class="menu">
                     
-                    <a class="item" href="/poms/job_table?tdays=1">
+                    <a class="item" href="{{pomspath}}/job_table?tdays=1">
                         All (Last Day)
                     </a>
-                    <a class="item" href="/poms/jobs_by_exitcode?tdays=1">
+                    <a class="item" href="{{pomspath}}/jobs_by_exitcode?tdays=1">
                         By Exit Code (Last Day)
                     </a>
-                    <a class="item" href="/poms/jobs_by_exitcode?tdays=7">
+                    <a class="item" href="{{pomspath}}/jobs_by_exitcode?tdays=7">
                         By Exit Code (Last Week)
                     </a>
                 </div>
@@ -158,7 +158,7 @@
                        <div class="item">
                        <!--  
                             <a class="ui logo icon image" href="">
-                                <img src="/poms/static/images/logo.png">
+                                <img src="{{pomspath}}/static/images/logo.png">
                             </a>
                         -->
                               <div style="cursor: default;">
@@ -167,11 +167,11 @@
                               </div>
                         </div>
                         
-                        <a class="item" href="/poms/">
+                        <a class="item" href="{{pomspath}}/">
                             <b>Dashboard</b>
                         </a>
 
-                        <a class="item" href="/poms/calendar">
+                        <a class="item" href="{{pomspath}}/calendar">
                             <b>Calendar</b>
                         </a>
                         
@@ -179,14 +179,14 @@
                             <b>Requests</b>
                         </a>
 
-                        <a class="item" href="/poms/admin_screen">
+                        <a class="item" href="{{pomspath}}/admin_screen">
 	                    <b>DB Admin</b>
                         </a>
 
             <div class="item">
                 <div class="header">Campaigns</div>
                 <div class="menu">
-                <a class="item" href="/poms/show_campaigns">
+                <a class="item" href="{{pomspath}}/show_campaigns">
                   Active
                 </a>
                 </div>
@@ -195,13 +195,13 @@
                         <div class="item">
                             <div class="header">Jobs</div>
 				<div class="menu">
-				    <a class="item" href="/poms/job_table?tdays=1">
+				    <a class="item" href="{{pomspath}}/job_table?tdays=1">
 					All (Last Day)
 				    </a>
-				    <a class="item" href="/poms/jobs_by_exitcode?tdays=1">
+				    <a class="item" href="{{pomspath}}/jobs_by_exitcode?tdays=1">
 					By Exit Code (Last Day)
 				    </a>
-				    <a class="item" href="/poms/jobs_by_exitcode?tdays=7">
+				    <a class="item" href="{{pomspath}}/jobs_by_exitcode?tdays=7">
 					By Exit Code (Last Week)
 				    </a>
 				    
@@ -241,7 +241,7 @@ function validateQuickSearchForm()
 
 <div class="item">
   <div class="ui inverted transparent left icon input">
-         <form  method="get" action="/poms/quick_search" onsubmit="return validateQuickSearchForm()">
+         <form  method="get" action="{{pomspath}}/quick_search" onsubmit="return validateQuickSearchForm()">
              <input type="text" name="jobsub_job_id" placeholder="Search...">
          </form>
   </div>
