--- a/webservice/templates/triage_job.html
+++ b/webservice/templates/triage_job.html
@@ -6,11 +6,11 @@
 
 {%block breadcrumbs%}
 <div class="ui breadcrumb" style="margin-top: -45px;">
-  <a href="/poms/" class="section">Home</a>
+  <a href="{{pomspath}}/" class="section">Home</a>
   <div class="divider"> / </div>
-  <a href="/poms/show_campaigns/" class="section">Campaigns</a>
+  <a href="{{pomspath}}/show_campaigns/" class="section">Campaigns</a>
   <div class="divider"> / </div>
-  <a href="/poms/show_task_jobs?task_id={{job_info.Job.task_id}}&tmin={{tmin}}" class="section">Jobs in task {{job_info.Job.task_id}}</a>
+  <a href="{{pomspath}}/show_task_jobs?task_id={{job_info.Job.task_id}}&tmin={{tmin}}" class="section">Jobs in task {{job_info.Job.task_id}}</a>
   <div class="divider"> / </div>
   <div class="section">Triage job {{job_id}}</div>
 </div>
@@ -96,7 +96,7 @@
       Logs
 </h4>
 
-<button onclick="location.href='/poms/triage_job?job_id={{job_id}}&tmin={{tmin}}&force_reload=True';" class="ui button">Refetch &nbsp;&nbsp;&nbsp;<i class="refresh icon"></i></button>
+<button onclick="location.href='{{pomspath}}/triage_job?job_id={{job_id}}&tmin={{tmin}}&force_reload=True';" class="ui button">Refetch &nbsp;&nbsp;&nbsp;<i class="refresh icon"></i></button>
 <br/>
 <br/>
 
@@ -109,10 +109,10 @@
 {% for item in job_file_list %}
 
 {% if item.find(jobsub_job_id_digits) > -1 %}
-<mark> <a href="/poms/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item}}">{{ item }}</a> </mark>
+<mark> <a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item}}">{{ item }}</a> </mark>
 <br/>
 {% else %}
-<a href="/poms/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item}}">{{ item }}</a>
+<a href="{{pomspath}}/job_file_contents?job_id={{job_id}}&task_id={{job_info.Job.task_id}}&tmin={{tmin}}&file={{item}}">{{ item }}</a>
 <br/>
 {% endif %}
 
