key on task jobs page...

--- a/webservice/templates/job_grid.html
+++ b/webservice/templates/job_grid.html
@@ -39,4 +39,6 @@
      <div class="right floated right aligned six wide column">{{tmax}}</div>
    </div>
   </div>
+  <h4>Key</h4>
+  {{key}}
 {%endblock%}
