--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -290,11 +290,11 @@ function validateQuickSearchForm()
                         {%block content%} {%endblock%}
 
 
-                         <div class="ui small basic test modal">
+                         <!--<div class="ui small basic test modal">
                             <div class="ui icon header">
                               <i class="warning sign icon"></i>
                               Under Construction
-                            </div>
+                            </div>-->
                          </div>
 
 
