--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -76,12 +76,28 @@
             <a class="item requests"  href="#">
                 <b>Requests</b>
             </a>
-
+	    
+	    <!--
            <a class="item" href="{{pomspath}}/admin_screen">
         	<b>DB Admin</b>
            </a>
-
+	   -->
             
+            <div class="item">
+                <div class="header">DB Admin</div>
+                <div class="menu">
+                    <a class="item" href="{{pomspath}}/experiment_auth">
+                        Experiments
+                    </a>
+                    <a class="item" href="{{pomspath}}/user_auth">
+                        Users
+                    </a>
+                    <a class="item" href="{{pomspath}}/raw_tables">
+                        Raw Tables
+                    </a>
+                </div>
+            </div>
+
             <div class="item">
                 <div class="header">Campaigns</div>
                 <div class="menu">
@@ -179,9 +195,20 @@
                             <b>Requests</b>
                         </a>
 
-                        <a class="item" href="{{pomspath}}/admin_screen">
-	                    <b>DB Admin</b>
-                        </a>
+            <div class="item">
+                <div class="header">DB Admin</div>
+                <div class="menu">
+                    <a class="item" href="{{pomspath}}/experiment_auth">
+                        Experiments
+                    </a>
+                    <a class="item" href="{{pomspath}}/user_auth">
+                        Users
+                    </a>
+                    <a class="item" href="{{pomspath}}/raw_tables">
+                        Raw Tables
+                    </a>
+                </div>
+            </div>
 
             <div class="item">
                 <div class="header">Campaigns</div>
