time range on jobs summary

--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -32,7 +32,7 @@
 
 
 {%block content%}
-  <div class="ui grid">
+  <div class="ui">
     {{screendata}}
     <div class=row>
      <div class="left floated left aligned six wide column">{{tmin}}</div>
