partway through Grand Date Unification

--- a/webservice/templates/job_table.html
+++ b/webservice/templates/job_table.html
@@ -31,17 +31,12 @@
     Jobs
 </h1>
 <div class="ui subheader">
-{{days}} Days of Jobs ending {{tmax}} {{extra}}
+Jobs for {{time_range_string}}
 </div>
 
 <a href="{{prev}}">&lt;previous {{days}} days</a> | 
 <a href="{{next}}">next {{days}} days &gt;</a>
 {%endblock%}
-
-
-
-
-
 
 {%block subheader%}
 {%endblock%}
