--- a/webservice/templates/campaign_grid.html
+++ b/webservice/templates/campaign_grid.html
@@ -24,7 +24,7 @@
 
 
 {%block subheader%}
-<h2 class="ui dividing header">Active Campaigns as of <p class="tmin" style="display:inline;"></p></h2>
+<h2 class="ui dividing header">Active Campaigns for {{time_range_string}}</h2>
 <a href="{{prev}}">&lt;previous {{days}} days</a> | 
 <a href="{{next}}">next {{days}} days &gt;</a>
 {%endblock%}
@@ -35,15 +35,7 @@
 {%block content%}
   <div class="ui">
     {{screendata}}
-    <div class=row>
-     <div class="left floated left aligned six wide column tmin"></div>
-     <div class="right floated right aligned six wide column tmax"></div>
-   </div>
   </div>
-
-
-
-
 
 <script>
 var tmin_local_time = moment.utc('{{tmin}}').toDate();
@@ -54,7 +46,5 @@ var tmax_local_time = moment.utc('{{tmax}}').toDate();
 tmax_local_time = moment(tmax_local_time).format('YYYY-MM-DD HH:mm');
 $( ".tmax" ).html( tmax_local_time );
 </script>
-
-
 
 {%endblock%}
