--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -86,7 +86,7 @@
             <div class="item">
                 <div class="header">DB Admin</div>
                 <div class="menu">
-                    <a class="item" href="{{pomspath}}/experiment_auth">
+                    <a class="item" href="{{pomspath}}/experiment_edit">
                         Experiments
                     </a>
                     <a class="item" href="{{pomspath}}/user_auth">
@@ -198,7 +198,7 @@
             <div class="item">
                 <div class="header">DB Admin</div>
                 <div class="menu">
-                    <a class="item" href="{{pomspath}}/experiment_auth">
+                    <a class="item" href="{{pomspath}}/experiment_edit">
                         Experiments
                     </a>
                     <a class="item" href="{{pomspath}}/user_auth">
